<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ashbg"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.ivara.aravi.minimodulechat.Main2Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="casual"
        android:text="@string/mini_module_registration"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/eml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/email_id2"
        android:inputType="textEmailAddress"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/eml"
        android:layout_below="@+id/eml"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:visibility="visible" />


    <Button
        android:id="@+id/reg1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/ss"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@color/colorAccent"
        android:drawableLeft="@drawable/reg"
        android:fontFamily="casual"
        android:text="@string/register2"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/sign"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/reg1"
        android:layout_marginBottom="25dp"
        android:background="@android:color/holo_blue_bright"
        android:drawableLeft="@drawable/login"
        android:fontFamily="casual"
        android:text="@string/signin"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/ss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="casual"
        android:text="@string/already_a_member_of_mini_module_community_please_login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent" />
</RelativeLayout>
