<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ashbg"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:visibility="visible"
    tools:context="com.ivara.aravi.minimodulechat.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:fontFamily="casual"
        android:text="@string/mini_module_chat"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="?android:attr/colorFocusedHighlight"
        android:textStyle="bold"
        android:typeface="monospace"
        android:visibility="visible" />

    <EditText
        android:id="@+id/eml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eml"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewEnd"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pws"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:background="@android:color/holo_red_light"
        android:drawableLeft="@drawable/login"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textStyle="bold"
        android:typeface="monospace"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/reg1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@android:color/holo_green_light"
        android:drawableLeft="@drawable/reg"
        android:fontFamily="casual"
        android:text="@string/register"
        android:textStyle="bold"
        android:typeface="monospace"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>
